# pwnedpasswords-offline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml  test-python-matrix.yml
pwnedpasswords_offline/: __init__.py  bloom.py  checker.py  helper.py
pwnedpasswords_offline/tools/: seed_bloom.py  speed.py
tests/: dummy_pwned-passwords-sha1-ordered-by-hash.txt  test_bloom.py  test_pwnedpasswords_offline.py
