[tool.poetry]
name = "pwnedpasswords-offline"
version = "0.1.0"
description = ""
authors = ["Henryk Plötz <henryk@ploetzli.ch>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
