[tool.poetry]
name = "pwnedpasswords-offline"
version = "1.0.3"
description = "Pwned Passwords check (offline)"
authors = ["Henryk Plötz <henryk@ploetzli.ch>"]
license = "LGPL-2.1-or-later"
readme = "README.md"
homepage = "https://github.com/henryk/pwnedpasswords-offline"
repository = "https://github.com/henryk/pwnedpasswords-offline"
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
