[tool.poetry]
name = "pwnedpasswords-offline"
version = "1.1.0"
description = "Pwned Passwords check (offline)"
authors = ["Henryk Plötz <henryk@ploetzli.ch>"]
license = "LGPL-2.1-or-later"
readme = "README.md"
homepage = "https://github.com/henryk/pwnedpasswords-offline"
repository = "https://github.com/henryk/pwnedpasswords-offline"
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
pwnedpasswords_offline_seed_bloom = "pwnedpasswords_offline.tools.seed_bloom:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
